Major stitch generation revamp